provider-catalogue/00-provider-catalogue-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: provider-catalogue
  labels:
    name: provider-catalogue
---
