provider-catalogue/20-provider-catalogue-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prov-catalogue
  namespace: provider-catalogue
  labels:
    app: prov-catalogue
spec:
  selector:
    matchLabels:
      app: prov-catalogue
  replicas: 1
  template:
    metadata:
      labels:
        app: prov-catalogue
    spec:
      containers:
      - name: prov-catalogue
        image: registry.gitlab.com/gaia-x/data-infrastructure-federation-services/deployment-scenario/catalogue/provider-catalogue:${IMAGETAG_PROVIDER_CATALOGUE}
        imagePullPolicy: Always
        ports:
        - containerPort: 5002
          name:  prov-catalogue
          protocol: TCP
      restartPolicy: Always
---
