provider-catalogue/25-provider-catalogue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prov-catalogue
  namespace: provider-catalogue
spec:
  selector:
    app: prov-catalogue
  type: ClusterIP
  ports:
  - name: prov-catalogue
    protocol: TCP
    port: 5002
    targetPort: 5002
---
